[package]
name = "rust-maze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.4"
rand = "0.8.5"
knossos = { version = "1.2.0", path = "../knossos" }

[profile.release]
opt-level = 3        # Maximum optimization
lto = true           # Enable link-time optimization
codegen-units = 1    # Maximize optimization potential
panic = 'abort'      # Remove panic unwinding code
strip = true         # Strip symbols from binary
